@@ -54,14 +54,13 @@ public:
 
   sigc::signal<void> grabbed;
   sigc::signal<void> grab_failed;
-  sigc::signal<void, int, int> grab_motion;
-  sigc::signal<void, unsigned long, unsigned long> grab_key;
 
 protected:
   virtual bool AcceptKeyNavFocus() { return false; }
   virtual void ShowPrimaryView() = 0;
   virtual void ShowSecondaryView();
 
+  nux::Area* FindKeyFocusArea(unsigned int, unsigned long, unsigned long) override;
   nux::Area* FindAreaUnderMouse(nux::Point const& mouse, nux::NuxEventType event_type) override;
 
   void GrabScreen(bool cancel_on_failure);
