@@ -76,6 +76,7 @@ private:
   void OnPresenceStatusChanged(bool idle);
   void OnScreenSaverActivationRequest(bool activate);
   void OnPrimaryShieldMotion(int x, int y);
+  void OnLockScreenInputEvent(XEvent const&);
   void OnBlankWindowInputEvent(XEvent const&);
 
   std::vector<nux::ObjectPtr<BaseShield>> shields_;
